changes in name

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>Copyright to Satwik. Made with <i class="fa-solid fa-heart"></i> by Easy Tutorials.</p>
+            <p>Copyright to Satwik. Made with <i class="fa-solid fa-heart"></i> by Satwik.</p>
         </div>
     </div>
 
