--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <p>This program use MNIST dataset to recognize the 
                             handwritten digit in numbers. It uses 28 x 28 
                             picture to regconize the digit.</p>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://github.com/satwikgupta/Bharat_intern/tree/962dc78357bffe5ecd3ba62782194ba80f9fdcd7/digit_recognition"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
