new project and pfp

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/photo.jpg" alt ="Satwik" class="profile-pic">
+                    <img src="images/satwik_pfp.jpg" alt ="Satwik" class="profile-pic">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -126,12 +126,11 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work (2).jpg" alt="">
+                    <img src="images/work2.png" alt="">
                     <div class="layer">
-                        <h3>Music App</h3>
-                        <p>the app connects you the talented paoeple around the world.
-                            Download it from play store. </p>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>QR code Generator</h3>
+                        <p>This website generates a QR code for the given text and the links. </p>
+                            <a href="https://satwikgupta.github.io/QRcodeGenerator/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -145,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more...</a>
+            <a href="#portfolio" class="btn">See more...</a>
         </div>
     </div>
 
