adding new project

--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
                 </div>
                 
                 <div class="work hidden">
+                    <img src="images/todo.jpg" alt="">
+                    <div class="layer">
+                        <h3>Todo List</h3>
+                        <p>"Simplify your task management with our Todo App, 
+                            built using React and Redux for a seamless user experience.
+                        </p>
+                        <a  href="https://github.com/satwikgupta/Bharat_intern/tree/962dc78357bffe5ecd3ba62782194ba80f9fdcd7/digit_recognition"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work hidden">
                     <img src="images/digit-project.png" alt="">
                     <div class="layer">
                         <h3>Handwritten Digit Recognition</h3>
